Fixed blogs page styling by removing extra padding

--- a/src/styles/blogs.module.scss
+++ b/src/styles/blogs.module.scss
@@ -1,5 +1,9 @@
 @import './mixins.scss';
 
+.wrapper {
+  @include section-wrapper;
+}
+
 .container {
   @include section-container;
 }
