--- a/src/styles/blogspage.module.scss
+++ b/src/styles/blogspage.module.scss
@@ -1,10 +1,9 @@
 @import './mixins.scss';
 
 .wrapper {
-  @include section-wrapper;
   // puts footer at bottom if blog is short
-  min-height: calc(100vh - 149px);
-  margin-top: 83px;
+  min-height: calc(100vh - 109px);
+  margin-top: 43px;
   padding-top: 20px;
   padding-bottom: 0;
 
